# ollamao

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
config/: keys.yaml  models.yaml
scripts/: setup-models.sh
src/ollamao/: __init__.py  auth.py  config.py  logging.py  main.py  models.py  ollama_client.py  router.py
tests/: __init__.py  test_chat.py  test_main.py
